BITE/Issue/styles.css
.colheight-sm-1 {
  height: 205px;
}

@media (max-width: 991px) and (min-width: 481px) {
  .colheight-sm-1 {
    height: 300px;
  }
}
@media (min-width: 992px) {
  .biggest h3{
    font-size: 36px;
  }
}

@media (min-width: 992px) {
  .colheight-sm-1 {
    height: 200px;
  }
  .colheight-md-2{
    height: 400px;
  }
}

.col-md-3 {
  padding-left: 3px;
  padding-right: 3px;
}

.section .col-md-8 {
  padding: 0px;
}
.section .col-md-3 {
  padding: 0px;
}    
.section .col-md-4 {
  padding: 0px;
}

.issue-article-name {
  position: absolute;
  bottom: 20px;
  padding: 20px;
  width: 100%;
  text-shadow: 0 2px 2px rgba(0,0,0,0.5);
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  text-align: center;
  font-family: 'Oswald', sans-serif;
  font-weight: 300;
  color: #FFF;
  letter-spacing: 1px;
  font-size: 25px;
  text-transform: uppercase;
}
.issue-article-photographer {
  padding: 0px 7px;
  color: #fff;
  font-size: 16px;
  text-transform: uppercase;
  margin-bottom: 2px;
  display: block;
  text-align: center;
  position: absolute;
  bottom: 15px;
  margin: 0 auto;
  margin-top: 15px;
  width: 100%;
  font-family: 'Dosis', Arial, Helvetica, sans-serif;
  font-weight: 300;
  /*border: 1px solid #fff;*/
}
.issue img {
  width: 100%;
}
.issue-title-wrap-row2 {
  box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
    -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
    -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 8;
  top: 0;
}
.issue-title-wrap-row1 {
  box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
    -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
    -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 8;
  top: 0;
}
.colheight-sm-1 img {
/* display: block; */
width: auto;
min-height: auto;
/* position: static; */
height: 300px;
min-width: 100%;
/* left: -50%; */
position: absolute;
}

.colheight-md-2 img {
/* display: block; */
width: auto;
min-height: auto;
/* position: static; */
height: 400px;
min-width: 100%;
/* left: -50%; */
position: absolute;
}

